# SentinelAI

./: .gitignore  Anchor.toml  Cargo.toml  README.md  Untitled-1.txt  package-lock.json  package.json  tsconfig.json
.anchor/test-ledger/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  test-ledger-log.txt  validator-keypair.json  vote-account-keypair.json
.anchor/test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1776612193199692  MANIFEST-000021
backend/: jest.config.js  package-lock.json  package.json
backend/src/: constants.ts  index.ts
backend/src/__tests__/: properties.test.ts
backend/src/models/: types.ts
backend/src/routes/: execute.ts  x402Resource.ts
backend/src/services/: auditLogger.test.ts  auditLogger.ts  (+8 more)
frontend/: AGENTS.md  next.config.ts  package-lock.json  package.json
programs/sentinel_ai/: Cargo.toml
programs/sentinel_ai/src/: errors.rs  lib.rs  state.rs  tests.rs
programs/sentinel_ai/src/instructions/: freeze_agent.rs  initialize_agent_profile.rs  mod.rs  set_policy.rs  submit_transaction.rs  unfreeze_agent.rs
test-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-200-8WHKTyQH7xBjjwpgMTP3bdRv4u2Jk9n4gPc3AjYSF26s.tar.zst  snapshot-300-CWk8VXVmKKJnABm7bVkQWrcwVDRS9cRyqHwJpuvfx3jx.tar.zst  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1776611668666614  MANIFEST-000021
tests/: sentinel_ai.ts
(+33 files in other folders)
