[package]
name = "sentinel-ai"
version = "0.1.0"
description = "SentinelAI — On-chain Execution Control Layer for autonomous AI agents on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sentinel_ai"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"

[dev-dependencies]
proptest = "1.4"
